# bitcoach

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: actions.py  classify.py  coaching.py  patterns.py  statistics.py
backend/app/api/routes/: analysis.py  coaching.py  trades.py
backend/app/core/: csv_parser.py  events_parser.py  paste_parser.py  security.py  upbit_client.py
backend/app/db/: database.py
backend/app/models/: trade.py
backend/app/services/: coaching_agent.py  trade_analyzer.py
backend/tests/: conftest.py  test_agent_state.py  test_analyzer.py  test_csv_parser.py  test_events_parser.py  test_health.py  test_parse_order.py  test_paste_parser.py  test_security.py
docs/: CONTRIBUTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: upbit-export.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Coaching.tsx  Dashboard.tsx  Landing.tsx  Setup.tsx
frontend/src/types/: index.ts
